--- a/EMD/Views/EMDs/Details.cshtml
+++ b/EMD/Views/EMDs/Details.cshtml
@@ -14,7 +14,7 @@
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item"><a asp-action="Index">Danh Sách Đặt Cọc</a></li>
+                    <li class="breadcrumb-item"><a asp-route-strUrl="@Model.StrUrl" asp-controller="EMDCanTrus" asp-action="DetailsRedirect">Danh Sách Đặt Cọc</a></li>
                     <li class="breadcrumb-item active">Xem Chi Tiết Đặt Cọc</li>
                 </ol>
             </div>
@@ -44,110 +44,79 @@
                 <div class="p-4 border rounded">
 
                     <div class="form-group row">
-                        <div class="col-1">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.Number" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.Number" class="form-control" readonly />
 
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SGTCode" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SGTCode" class="form-control" readonly />
 
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.BatDau" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" asp-for="EMDTbl.BatDau" class="form-control maskInput" disabled />
+                        </div>
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.KetThuc" class="control-label"></label>
+                            <input type="text" asp-for="EMDTbl.KetThuc" class="form-control maskInput" readonly />
                         </div>
 
                     </div>
 
                     <div class="form-group row">
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.KetThuc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.KetThuc" class="form-control maskInput" readonly />
-                        </div>
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.NgayDC" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" readonly />
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.HetHan" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" asp-for="EMDTbl.HetHan" class="form-control maskInput" readonly />
 
                         </div>
 
-
-                    </div>
-
-                    <div class="form-group row">
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SLVeDatCoc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SLVeDatCoc" class="form-control" readonly />
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.HangHK" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.HangHK" class="form-control" readonly />
 
                         </div>
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.STDatCoc" asp-format="{0:0,0}" class="form-control" readonly />
-
-                        </div>
-
                     </div>
 
                     <div class="form-group row">
 
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
+                            <input asp-for="EMDTbl.STDatCoc" asp-format="{0:0,0}" class="form-control" readonly />
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.HoanCoc" class="control-label"></label>
                         </div>
-                        <div class="col-3">
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.HoanCoc" class="control-label"></label>
                             <input type="text" asp-for="EMDTbl.HoanCoc" class="form-control " readonly />
 
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.LoaiBK" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.LoaiBK" class="form-control" readonly />
 
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SLVeDaXuat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SLVeDaXuat" class="form-control" readonly />
 
                         </div>
@@ -155,84 +124,55 @@
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-1">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.TienXuatVe" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.TienXuatVe" class="form-control" readonly />
 
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.TienPhat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.TienPhat" class="form-control" readonly />
 
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.NgayPhat" class="control-label "></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" value="" asp-for="EMDTbl.NgayPhat" class="form-control maskInput" readonly />
 
                         </div>
 
-                    </div>
-
-                    <div class="form-group row">
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SoCTPhat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SoCTPhat" class="form-control" readonly />
 
                         </div>
 
-                        <div class="col-1">
+                    </div>
+
+                    <div class="form-group row">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.LoaiTien" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.LoaiTien" class="form-control" readonly />
 
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.TyGia" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.TyGia" class="form-control" readonly />
 
                         </div>
 
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.GhiChu" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <textarea asp-for="EMDTbl.GhiChu" class="form-control" readonly></textarea>
-
-                        </div>
-
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.DongHoSo" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" value="" asp-for="EMDTbl.DongHoSo" class="form-control" readonly />
 
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.PNR" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.PNR" class="form-control" readonly />
 
                         </div>
@@ -241,39 +181,36 @@
 
                     <div class="form-group row">
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.GhiChu" class="control-label"></label>
+                            <textarea asp-for="EMDTbl.GhiChu" class="form-control" readonly></textarea>
+
                         </div>
-                        <div class="col-3">
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
                             <input asp-for="EMDTbl.NguoiNhap" class="form-control" readonly />
 
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SLVeHoan" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SLVeHoan" class="form-control " id="txtNguoiNhap" readonly />
-                            <span asp-validation-for="EMDTbl.SLVeHoan" class="text-danger"></span>
+
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.ThucTra" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.ThucTra" class="form-control " id="txtNguoiNhap" readonly />
-                            <span asp-validation-for="EMDTbl.ThucTra" class="text-danger"></span>
-                        </div>
 
+                        </div>
 
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-1">
+                        
+                        <div class="col-md-12">
                             <label asp-for="EMDTbl.DienGiai" class="control-label"></label>
-                        </div>
-                        <div class="col-11">
                             <textarea asp-for="EMDTbl.DienGiai" class="form-control" rows="12" readonly></textarea>
 
                         </div>
@@ -283,7 +220,7 @@
 
                     <div class="form-group">
                         <a asp-action="Edit" asp-route-id="@Model.EMDTbl.Id" class="btn btn-primary"><i class="fas fa-edit"></i></a>
-                        <a class="btn btn-success" asp-action="Index"><i class="fas fa-backward"></i></a>
+                        <a class="btn btn-success" asp-route-strUrl="@Model.StrUrl" asp-controller="EMDCanTrus" asp-action="DetailsRedirect"><i class="fas fa-backward"></i></a>
                     </div>
                 </div>
 
