--- a/EMD/Views/EMDCanTrus/EMDPlus.cshtml
+++ b/EMD/Views/EMDCanTrus/EMDPlus.cshtml
@@ -29,7 +29,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-file text-info"></i> EMD - @Model.EMDTbl.Number</h3>
+            <h3 class="card-title"><i class="fas fa-file text-info"></i> EMD - <b>@Model.EMDTbl.Number</b></h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -69,12 +69,12 @@
                             <span asp-validation-for="EMDCanTru.LoaiBK" class="text-danger"></span>
                         </div>
 
-                        <div class="col-3">
+                        @*<div class="col-3">
                             <label asp-for="EMDCanTru.TimThay" class="control-label"></label>
                             <br />
                             <input type="checkbox" asp-for="EMDCanTru.TimThay" id="txtTimThay" />
                             <span asp-validation-for="EMDCanTru.TimThay" class="text-danger"></span>
-                        </div>
+                        </div>*@
 
 
                     </div>
