--- a/EMD/Views/EMDs/Create.cshtml
+++ b/EMD/Views/EMDs/Create.cshtml
@@ -54,118 +54,84 @@
 
                     <div class="form-group row">
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.Number" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="Number" class="form-control" id="txtNumber1" />
                             <span asp-validation-for="Number" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SGTCode" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SGTCode" class="form-control" id="txtSgtCode" />
                             <span asp-validation-for="EMDTbl.SGTCode" class="text-danger"></span>
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.BatDau" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" asp-for="EMDTbl.BatDau" class="form-control maskInput" id="txtBatDau" />
                             <span asp-validation-for="EMDTbl.BatDau" class="text-danger"></span>
                         </div>
 
-                        
-                    </div>
-
-                    <div class="form-group row">
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.KetThuc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" asp-for="EMDTbl.KetThuc" class="form-control maskInput" id="txtKetThuc" />
                             <span asp-validation-for="EMDTbl.KetThuc" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.NgayDC" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" id="txtNgayDC" />
-                            <span asp-validation-for="EMDTbl.NgayDC" class="text-danger"></span>
-                        </div>
-
-
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.HetHan" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input type="text" asp-for="EMDTbl.HetHan" class="form-control maskInput" id="txtHetHan"/>
-                            <span asp-validation-for="EMDTbl.HetHan" class="text-danger"></span>
-                        </div>
-
-
                     </div>
 
                     <div class="form-group row">
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.SLVeDatCoc" class="control-label"></label>
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.NgayDC" class="control-label"></label>
+                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" id="txtNgayDC" />
+                            <span asp-validation-for="EMDTbl.NgayDC" class="text-danger"></span>
                         </div>
-                        <div class="col-3">
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.HetHan" class="control-label"></label>
+                            <input type="text" asp-for="EMDTbl.HetHan" class="form-control maskInput" id="txtHetHan" />
+                            <span asp-validation-for="EMDTbl.HetHan" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.SLVeDatCoc" class="control-label"></label>
                             <input asp-for="EMDTbl.SLVeDatCoc" class="form-control" id="txtSLVeDatCoc" />
                             <span asp-validation-for="EMDTbl.SLVeDatCoc" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.HangHK" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             @*<input asp-for="EMDTbl.HangHK" class="form-control" />*@
                             <select class="form-control" asp-for="EMDTbl.HangHK" asp-items="@Model.HangHKs.ToSelectListItemString(Model.EMDTbl.HangHK)"></select>
                             <span asp-validation-for="EMDTbl.HangHK" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.STDatCoc" class="form-control numbers" />
-                            <span asp-validation-for="EMDTbl.STDatCoc" class="text-danger"></span>
-                        </div>
 
                     </div>
 
                     <div class="form-group row">
 
-
-
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.HoanCoc" class="control-label"></label>
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
+                            <input asp-for="EMDTbl.STDatCoc" class="form-control numbers" />
+                            <span asp-validation-for="EMDTbl.STDatCoc" class="text-danger"></span>
                         </div>
-                        <div class="col-3">
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.HoanCoc" class="control-label"></label>
                             <input type="text" value="" asp-for="EMDTbl.HoanCoc" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.HoanCoc" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.LoaiBK" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.LoaiBK" class="form-control" />
                             <span asp-validation-for="EMDTbl.LoaiBK" class="text-danger"></span>
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SLVeDaXuat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SLVeDaXuat" class="form-control" id="txtSLVeDaXuat" />
                             <span asp-validation-for="EMDTbl.SLVeDaXuat" class="text-danger"></span>
                         </div>
@@ -173,86 +139,55 @@
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-1">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.TienXuatVe" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.TienXuatVe" class="form-control numbers" id="txtTienXuatVe" />
                             <span asp-validation-for="EMDTbl.TienXuatVe" class="text-danger"></span>
                         </div>
 
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.TienPhat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.TienPhat" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.TienPhat" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.NgayPhat" class="control-label "></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" value="" asp-for="EMDTbl.NgayPhat" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.NgayPhat" class="text-danger"></span>
                         </div>
 
-                    </div>
-
-                    <div class="form-group row">
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.LoaiTien" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.LoaiTien" class="form-control" />
                             <span asp-validation-for="EMDTbl.LoaiTien" class="text-danger"></span>
                         </div>
 
+                    </div>
 
-                        <div class="col-1">
+                    <div class="form-group row">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.TyGia" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.TyGia" class="form-control" />
                             <span asp-validation-for="EMDTbl.TyGia" class="text-danger"></span>
                         </div>
 
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SoCTPhat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SoCTPhat" class="form-control" />
                             <span asp-validation-for="EMDTbl.SoCTPhat" class="text-danger"></span>
                         </div>
 
-                    </div>
-
-                    <div class="form-group row">
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.GhiChu" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <textarea asp-for="EMDTbl.GhiChu" class="form-control"></textarea>
-                            <span asp-validation-for="EMDTbl.GhiChu" class="text-danger"></span>
-                        </div>
-
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.DongHoSo" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input type="text" value="" asp-for="EMDTbl.DongHoSo" class="form-control maskInput" />
                             <span asp-validation-for="EMDTbl.DongHoSo" class="text-danger"></span>
                         </div>
 
-
-
-                        <div class="col-1">
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.PNR" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.PNR" class="form-control" />
                             <span asp-validation-for="EMDTbl.PNR" class="text-danger"></span>
                         </div>
@@ -260,26 +195,27 @@
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.GhiChu" class="control-label"></label>
+                            <textarea asp-for="EMDTbl.GhiChu" class="form-control"></textarea>
+                            <span asp-validation-for="EMDTbl.GhiChu" class="text-danger"></span>
                         </div>
-                        <div class="col-3">
+
+                        <div class="col-md-3">
+                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
                             <input asp-for="EMDTbl.NguoiNhap" value="@userName" class="form-control " id="txtNguoiNhap" readonly />
                             <span asp-validation-for="EMDTbl.NguoiNhap" class="text-danger"></span>
                         </div>
-                        
-                        <div class="col-1">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.SLVeHoan" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.SLVeHoan" class="form-control " id="txtSLVeHoan" readonly />
                             <span asp-validation-for="EMDTbl.SLVeHoan" class="text-danger"></span>
                         </div>
-                        
-                        <div class="col-1">
+
+                        <div class="col-md-3">
                             <label asp-for="EMDTbl.ThucTra" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
                             <input asp-for="EMDTbl.ThucTra" class="form-control " id="txtThucTra" readonly />
                             <span asp-validation-for="EMDTbl.ThucTra" class="text-danger"></span>
                         </div>
@@ -288,12 +224,8 @@
 
                     <div class="form-group row">
 
-
-
-                        <div class="col-1">
+                        <div class="col-md-12">
                             <label asp-for="EMDTbl.DienGiai" class="control-label"></label>
-                        </div>
-                        <div class="col-11">
                             <textarea asp-for="EMDTbl.DienGiai" class="form-control" rows="12" id="txtDienGiai"></textarea>
                             <span asp-validation-for="EMDTbl.DienGiai" class="text-danger"></span>
                         </div>
