--- a/EMD/Views/Shared/_Layout.cshtml
+++ b/EMD/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/MyCss.css" rel="stylesheet" />
     <link rel="shortcut icon" href="~/Images/favicon.ico" />
 </head>
 <body class="hold-transition sidebar-mini text-sm sidebar-open" style="height: auto;">
@@ -113,5 +114,28 @@
         });
 
     </script>
+    <style>
+        .error {
+            color: red;
+        }
+
+        .mytable tr:hover {
+            background-color: #ECF5F5;
+            cursor: pointer;
+        }
+
+        .hoverClass {
+            background-color: #3C8DBC;
+            /*color: white;*/
+        }
+
+        .card {
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+
+        .mytable {
+            box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+    </style>
 </body>
 </html>
